Some update on .desktop. Not usable yet
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@616 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/desktop/kde/x-tilem2.desktop
+++ b/data/desktop/kde/x-tilem2.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 MimeType=application/x-tilem2
 Comment=TilEm Rom File
 Comment[fr]=Fichier Rom TilEm
-Icon=
+Icon=/usr/local/share/tilem2/icons/  
 Type=MimeType
 Patterns=*.rom;
