--- a/data/desktop/kde/tilem2.desktop
+++ b/data/desktop/kde/tilem2.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Comment=
-Exec='tilem2'
+Exec='/usr/local/bin/tilem2'
 GenericName=TI Linux Emulator
 Icon=
 InitialPreference=2
 MimeType=application/x-tilem2
-Name=TilEm
+Name=TilEm2
 Path=
 StartupNotify=true
 Terminal=false
