Convert desktop file to current standard format.
We'll want MIME type definitions, too; I'm working on those.  I
haven't found any standard names for these MIME types, so I'm making
them up.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@617 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -6,6 +6,7 @@ datadir = @datadir@
 pkgdatadir = @datadir@/tilem2
 mandir = @mandir@
 icondir = @datadir@/icons
+applicationsdir = @datadir@/applications
 
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
@@ -59,6 +60,8 @@ install:
 	 done ; \
 	done
 	$(INSTALL_DATA) $(srcdir)/icons/hicolor/index.theme $(DESTDIR)$(pkgdatadir)/icons/hicolor
+	$(INSTALL) -d -m 755 $(DESTDIR)$(applicationsdir)
+	$(INSTALL_DATA) $(srcdir)/desktop/tilem2.desktop $(DESTDIR)$(applicationsdir)
 
 uninstall:
 	rm -f $(DESTDIR)$(pkgdatadir)/keybindings.ini
@@ -89,6 +92,7 @@ uninstall:
 	-rmdir $(DESTDIR)$(pkgdatadir)/symbols
 	-rmdir $(DESTDIR)$(pkgdatadir)/skins
 	-rmdir $(DESTDIR)$(pkgdatadir)
+	rm -f $(DESTDIR)$(applicationsdir)/tilem2.desktop
 
 Makefile: Makefile.in $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status
