Add a makefile rule to install in user's home directory.
Also, add the XDG "user data" directory to the search path, so this
will work without recompiling.

Just a little extra convenience, if you want to use tilem on a system
where you don't have root access.  Of course, you can always run
tilem2 from within the source package, but this is even easier.


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@620 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/Makefile.in
+++ b/Makefile.in
@@ -31,6 +31,16 @@ uninstall:
 	cd gui && $(MAKE) uninstall
 	cd data && $(MAKE) uninstall
 
+install-home: all
+	$(MAKE) install \
+	  bindir=$(HOME)/bin \
+	  datarootdir=$${XDG_DATA_HOME:-$(HOME)/.local/share}
+
+uninstall-home:
+	$(MAKE) uninstall \
+	  bindir=$(HOME)/bin \
+	  datarootdir=$${XDG_DATA_HOME:-$(HOME)/.local/share}
+
 distclean: clean
 	rm -f config.status config.log config.h configure.lineno
 	rm -f aclocal.m4
