Remove unneeded stuff from the win32 installation
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@635 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/installer/win32/Makefile.in
+++ b/installer/win32/Makefile.in
@@ -73,6 +73,9 @@ $(main_program): $(top_builddir)/gui/$(main_program)
 
 install-data:
 	cd $(top_builddir)/data && $(MAKE) install prefix=$(abs_builddir)
+	rm -rf share/mime
+	rm -rf share/applications
+	rm -rf share/icons
 
 # Install GTK+ configuration
 
