Windows installer improvements
- allow installing as a non-admin user (admins can choose to install
  "for all users" or "just for me")
- (optionally) create start menu folder
- (optionally) create desktop icon


git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@637 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/installer/win32/Makefile.in
+++ b/installer/win32/Makefile.in
@@ -35,7 +35,7 @@ all: install
 
 #### Build the installer
 
-dist: install
+dist: install installer.nsi
 	rm -f files.nsi rmfiles.nsi rmdirs.nsi
 	set -e ; for file in $(install_files) ; do \
 	  name=`echo "$$file" | sed 's,/,\\\\,g'` ; \
@@ -58,6 +58,8 @@ dist: install
 	done
 	$(MAKENSIS) installer.nsi
 
+installer.nsi: installer.nsi.in $(top_builddir)/config.status
+	cd $(top_builddir) && $(SHELL) ./config.status installer/win32/installer.nsi
 
 #### Install files into this directory
 
