Tweak keybindings. - Use Ctrl+Backspace or Ctrl+Delete for Clear (all models.) - Do not use 'p' for PRGM on 85/86.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@641 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/keybindings.ini
+++ b/data/keybindings.ini
@@ -15,6 +15,9 @@ ISO_Left_Tab      = 2nd
 Delete            = Del
 KP_Delete         = Del
 BackSpace         = Left, Del
+Ctrl+BackSpace    = Clear
+Ctrl+Delete       = Clear
+Ctrl+KP_Delete    = Clear
 0                 = 0
 KP_0              = 0
 1                 = 1
@@ -493,7 +496,6 @@ bracketleft       = 2nd, LParen
 bracketright      = 2nd, RParen
 comma             = Comma
 colon             = 2nd, DecPnt
-p                 = Prgm
 A                 = Alpha, Log
 B                 = Alpha, Sin
 C                 = Alpha, Cos
