Add KEYS to Windows installer
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@643 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/installer/win32/Makefile.in
+++ b/installer/win32/Makefile.in
@@ -15,7 +15,7 @@ VPATH = @srcdir@
 
 main_program = tilem2.exe
 
-docs = README NEWS COPYING CHANGELOG THANKS
+docs = README KEYS NEWS COPYING CHANGELOG THANKS
 
 install_files = $(main_program) *.dll *.txt
 install_subdirs = etc lib share
