--- a/installer/win32/Makefile.in
+++ b/installer/win32/Makefile.in
@@ -16,6 +16,7 @@ VPATH = @srcdir@
 main_program = tilem2.exe
 
 docs = README KEYS NEWS COPYING CHANGELOG THANKS
+extra_docs = COPYING-PIXMAN COPYING-ZLIB
 
 install_files = $(main_program) *.dll *.txt
 install_subdirs = etc lib share
@@ -82,6 +83,9 @@ install-data:
 	rm -rf share/icons
 	set -e ; for file in $(docs) ; do \
 	 sed 's/\r*$$/\r/' < $(top_srcdir)/$$file > $$file.txt ; \
+	done
+	set -e ; for file in $(extra_docs) ; do \
+	 sed 's/\r*$$/\r/' < $(srcdir)/$$file > $$file.txt ; \
 	done
 
 # Install GTK+ configuration
