Build distribution as a .tar.bz2
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@657 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/Makefile.in
+++ b/Makefile.in
@@ -79,7 +79,7 @@ dist:
 	  [ -d $$dir ] || $(INSTALL) -d $$dir ; \
 	  cp -p $(srcdir)/$$f $$dir ; \
 	done
-	tar cv $(distname) | gzip -c -9 > $(distname).tar.gz
+	tar cv $(distname) | bzip2 -c -9 > $(distname).tar.bz2
 
 Makefile: Makefile.in config.status
 	$(SHELL) ./config.status
