Add -lm to LIBS if necessary
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@661 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,8 @@ AC_CHECK_PROG([UPDATE_MIME_DATABASE],
 
 # Checks for libraries
 
+AC_CHECK_LIB(m, pow, [ LIBS="-lm $LIBS" ])
+
 m4_define(with_flags, [
   save_cflags="$CFLAGS"
   save_libs="$LIBS"
