--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -87,7 +87,7 @@ link = $(CC) $(CFLAGS) $(LDFLAGS) $(GUI_LDFLAGS)
 
 common_headers = ../config.h ../emu/tilem.h ../db/tilemdb.h \
 	gui.h emulator.h debugger.h emuwin.h skinops.h animation.h \
-	gtk-compat.h msgbox.h fixedtreeview.h
+	gtk-compat.h gettext.h msgbox.h fixedtreeview.h
 
 all: tilem2@EXEEXT@
 
@@ -127,7 +127,7 @@ keypaddlg.o: keypaddlg.c $(common_headers)
 	$(compile) -c $(srcdir)/keypaddlg.c
 
 # Memory management and messages
-memory.o: memory.c ../emu/tilem.h
+memory.o: memory.c gettext.h ../emu/tilem.h
 	$(compile) -c $(srcdir)/memory.c
 
 # Emulator management
@@ -151,7 +151,7 @@ preferences.o: preferences.c $(common_headers)
 	$(compile) -c $(srcdir)/preferences.c 
 
 # Open skin (skn format file) originally created by Julien Blache and Romain Lievins
-skinops.o: skinops.c skinops.h 
+skinops.o: skinops.c skinops.h gettext.h
 	$(compile) -c $(srcdir)/skinops.c
 
 # Popups and other stuff
@@ -216,15 +216,15 @@ sendfile.o: sendfile.c emucore.h $(common_headers)
 	$(compile) -c $(srcdir)/sendfile.c
 
 # File open/save dialogs
-filedlg.o: filedlg.c filedlg.h
+filedlg.o: filedlg.c filedlg.h gettext.h
 	$(compile) -c $(srcdir)/filedlg.c
 
 # Fixed-width tree view
-fixedtreeview.o: fixedtreeview.c fixedtreeview.h
+fixedtreeview.o: fixedtreeview.c fixedtreeview.h gettext.h
 	$(compile) -c $(srcdir)/fixedtreeview.c
 
 # TI-81 program file functions
-ti81prg.o: ti81prg.c ti81prg.h ../emu/tilem.h
+ti81prg.o: ti81prg.c ti81prg.h gettext.h ../emu/tilem.h
 	$(compile) -c $(srcdir)/ti81prg.c
 
 # Character conversion
