Fix a non fatal error in the desktop file
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@668 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/data/desktop/tilem2.desktop
+++ b/data/desktop/tilem2.desktop
@@ -7,4 +7,4 @@ MimeType=application/x-tigroup;application/x-ti73-variables;application/x-ti73-p
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=Education;Science;Math;Emulator;
+Categories=Education;Science;Math;System;Emulator;
