Install French translation
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@675 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/Makefile.in
+++ b/Makefile.in
@@ -48,20 +48,24 @@ clean:
 install: all
 	cd gui && $(MAKE) install
 	cd data && $(MAKE) install
+	cd po && $(MAKE) install
 
 uninstall:
 	cd gui && $(MAKE) uninstall
 	cd data && $(MAKE) uninstall
+	cd po && $(MAKE) uninstall
 
 install-home: all
 	$(MAKE) install \
 	  bindir=$(HOME)/bin \
-	  datarootdir=$${XDG_DATA_HOME:-$(HOME)/.local/share}
+	  datarootdir=$${XDG_DATA_HOME:-$(HOME)/.local/share} \
+	  gnulocaledir=$${XDG_DATA_HOME:-$(HOME)/.local/share}/tilem2/locale
 
 uninstall-home:
 	$(MAKE) uninstall \
 	  bindir=$(HOME)/bin \
-	  datarootdir=$${XDG_DATA_HOME:-$(HOME)/.local/share}
+	  datarootdir=$${XDG_DATA_HOME:-$(HOME)/.local/share} \
+	  gnulocaledir=$${XDG_DATA_HOME:-$(HOME)/.local/share}/tilem2/locale
 
 distclean: clean
 	rm -f config.status config.log config.h configure.lineno
