--- a/configure.ac
+++ b/configure.ac
@@ -120,6 +120,9 @@ fi
 
 # Gettext
 
+# List of all available languages
+ALL_LINGUAS='fr'
+
 GETTEXT_PACKAGE=tilem2
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
