Add localization files to Windows installer
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@684 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/configure.ac
+++ b/configure.ac
@@ -126,6 +126,7 @@ ALL_LINGUAS='fr'
 GETTEXT_PACKAGE=tilem2
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
+AC_SUBST(LINGUAS)
 
 # Tools used for building the Windows installer
 
