When installing in single-user mode, create a config file
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@690 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/installer/win32/installer.nsi.in
+++ b/installer/win32/installer.nsi.in
@@ -51,6 +51,18 @@ Section
 	SetOutPath "$INSTDIR"
 	!include "files.nsi"
 
+	${if} $MultiUser.InstallMode == "CurrentUser"
+	${andifnot} ${FileExists} "$INSTDIR\etc\tilem2\config.ini"
+		CreateDirectory "$INSTDIR\etc\tilem2"
+		${if} ${FileExists} "$LOCALAPPDATA\tilem2\config.ini"
+			CopyFiles "$LOCALAPPDATA\tilem2\*" "$INSTDIR\etc\tilem2"
+                ${else}
+			FileOpen $0 "$INSTDIR\etc\tilem2\config.ini" w
+			FileWrite $0 "$\n"
+			FileClose $0
+		${endif}
+	${endif}
+
 	!insertmacro MUI_STARTMENU_WRITE_BEGIN Application
 		CreateDirectory "$SMPROGRAMS\$StartMenuFolder"
 		CreateShortCut "$SMPROGRAMS\$StartMenuFolder\TilEm.lnk" "$INSTDIR\bin\tilem2.exe"
