Add audio filter.
Similar to the grayscale filter, this is an auxiliary object that can
be attached to a TilemCalc, which monitors the calc state and produces
a stream of output.  The API is somewhat more complicated than
TilemGrayLCD, because it is designed to be usable with any of the wide
variety of sound hardware and APIs (as well as because, unlike video,
audio output does not tolerate any sloppiness in terms of timing.)
See audio.c for an overview of the API and implementation.

Audio backend and GUI are yet to be done (the filter has been tested
with some kludgy backend code that needs to be largely rewritten. :P)



git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@698 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/emu/Makefile.in
+++ b/emu/Makefile.in
@@ -22,7 +22,8 @@ RANLIB = @RANLIB@
 SHELL = @SHELL@
 
 core_objects = calcs.o z80.o state.o rom.o flash.o link.o keypad.o lcd.o \
-	cert.o md5.o timers.o monolcd.o graylcd.o grayimage.o graycolor.o
+	cert.o md5.o timers.o monolcd.o graylcd.o grayimage.o graycolor.o \
+	audio.o
 
 x7_objects = x7_init.o x7_io.o x7_memory.o x7_subcore.o
 x1_objects = x1_init.o x1_io.o x1_memory.o x1_subcore.o
@@ -80,6 +81,8 @@ grayimage.o: grayimage.c tilem.h graylcd.h ../config.h
 	$(compile) -c $(srcdir)/grayimage.c
 graycolor.o: graycolor.c tilem.h ../config.h
 	$(compile) -c $(srcdir)/graycolor.c
+audio.o: audio.c tilem.h ../config.h
+	$(compile) -c $(srcdir)/audio.c
 
 # TI-73
 
